--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 astroid==3.3.10
 colorama==0.4.6
 contourpy==1.3.2
+coverage==7.8.2
 cycler==0.12.1
 dill==0.4.0
 fonttools==4.58.0
@@ -18,6 +19,7 @@ Pygments==2.19.1
 pylint==3.3.7
 pyparsing==3.2.3
 pytest==8.4.0
+pytest-cov==6.1.1
 python-dateutil==2.9.0.post0
 six==1.17.0
 tomlkit==0.13.2
